plugins {
    id "java-library"
    id "maven-publish"
    id "com.github.michaelruocco.embedded-mysql-plugin" version "2.1.11"
}

group "com.github.mslenc"
version "1.6.1"

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
    withJavadocJar()
    withSourcesJar()
}

dependencies {
    // https://mvnrepository.com/artifact/io.netty/netty-all
    api "io.netty:netty-all:4.1.105.Final"

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation "org.slf4j:slf4j-api:1.7.36"

    testImplementation "junit:junit:4.13.2"

    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    testImplementation "ch.qos.logback:logback-classic:1.3.5"

    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    testImplementation "org.postgresql:postgresql:42.5.1"
}

embeddedMysql {
    url = 'jdbc:mysql://127.0.0.1:3356/databaseName'
    username = 'asyncdb'
    password = 'asyncdb'
    version = 'v5_7_latest'
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

test {
  minHeapSize = "8192m" // initial heap size
  maxHeapSize = "8192m" // maximum heap size
  jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
}
